- Collapsed Sidebar will only animate on hover after leaving it once - Renamed all occurrences of "compact" to "collapsed" in sidebar to avoid confusion with compact mode-

--- a/stylus/framework/sidebar-compact.styl
+++ b/stylus/framework/sidebar-compact.styl
@@ -1,9 +1,9 @@
 // ****
 //
-// Compact navigation
+// Collapsed navigation
 //
 // ****
-.nav-compact
+.nav-collapsed
 	width: 86px
 	height: 100vh
 	position: absolute
@@ -14,6 +14,8 @@
 	display: none
 	transition: width 0.2s
 	transition-timing-function: grape-bezier
+
+.auto-expand
 	&:hover
 		width: 240px !important
 		max-width: 100% !important
@@ -32,7 +34,7 @@
 //
 // ****
 
-.org-area-bg-compact
+.org-area-bg-collapsed
 	height: 64px
 	display: block
 	text-align: center
@@ -53,7 +55,7 @@
 		background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
 					linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0))
 
-.org-info-compact
+.org-info-collapsed
 	width: 100%
 	height: 64px
 	display: table
@@ -67,7 +69,7 @@
 		top: 0px
 		z-index: 120
 		padding: 10px
-		.settings-icon-compact
+		.settings-icon-collapsed
 			text-align: center
 			font-size: 20px
 			color: rgba(255, 255, 255, 0.6)
@@ -113,7 +115,7 @@
 			margin-left: 8px
 			@extend $small-font-size
 
-.manage-rooms-button-compact
+.manage-rooms-button-collapsed
 	position: relative;
 	width: 80%;
 	display: block;
@@ -177,8 +179,8 @@
 		height: 100%
 
 
-.nav-title-wrap-compact,
-a.nav-title-wrap-compact
+.nav-title-wrap-collapsed,
+a.nav-title-wrap-collapsed
 	@extend $clearfix
 	display: block
 	color: sidebar-group-title
@@ -204,7 +206,7 @@ a.nav-title-wrap-compact
 				color: sidebar-group-title-highlight !important
 
 
-a.nav-title-wrap-compact
+a.nav-title-wrap-collapsed
 	display: inline-block
 	float: left
 	width: 100%
@@ -225,7 +227,7 @@ a.nav-title-wrap-compact
 
 // Sidebar Link Styling
 
-.nav-wrap-out-compact
+.nav-wrap-out-collapsed
 	height: 100%
 	position: relative
 	.channel-item
